hard code rapat IT

--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
                 <label for="ruangan">Pilih Ruangan:</label>
                 <select id="ruangan" name="ruangan" required>
                     <option value="Ruang Aula">Ruang Aula</option>
-                    <option value="Ruang Rapat IT">Ruang Rapat IT</option>
+                    <!-- <option value="Ruang Rapat IT">Ruang Rapat IT</option> -->
                 </select>
             </div>
             <div class="mb-3">
